--- a/index.html
+++ b/index.html
@@ -5,39 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
     <title>Calculator</title>
 </head>
 <body>
     <div class="container">
         <div class="screen">
-            <h3>0</h3>
-            <h1>0</h1>
+            <h3 class="prev-equation"></h3>
+            <h1 class="curr-input"></h1>
         </div>
         <div class="util-btns">
-            <ul>
-                <li><a href="#" class="clear-btn">Clear</a></li>
-                <li><a href="#" class="del-btn">Delete</a></li>
-            </ul>
+            <button type="button" class="clear-btn">Clear</button>
+            <button type="button" class="delete-btn">Delete</button>
         </div>
-        <div class="numpad">
-            <ul class="grid">
-                <li><a href="#" class="num">7</a></li>
-                <li><a href="#" class="num">8</a></li>
-                <li><a href="#" class="num">9</a></li>
-                <li><a href="#" class="num">&#247;</a></li>
-                <li><a href="#" class="num">4</a></li>
-                <li><a href="#" class="num">5</a></li>
-                <li><a href="#" class="num">6</a></li>
-                <li><a href="#" class="num">x</a></li>
-                <li><a href="#" class="num">1</a></li>
-                <li><a href="#" class="num">2</a></li>
-                <li><a href="#" class="num">3</a></li>
-                <li><a href="#" class="num">-</a></li>
-                <li><a href="#" class="num">.</a></li>
-                <li><a href="#" class="num">0</a></li>
-                <li><a href="#" class="num">=</a></li>
-                <li><a href="#" class="num">+</a></li>
+        <div class="numpad grid">
+                <button type="button" class="num btn">7</button>
+                <button type="button" class="num">8</a>
+                <button type="button" class="num">9</a>
+                <button type="button" class="op" id="divide">&#247;</a>
+                <button type="button" class="num">4</a>
+                <button type="button" class="num">5</a>
+                <button type="button" class="num">6</a>
+                <button type="button" class="op" id="multiply">x</a>
+                <button type="button" class="num">1</a>
+                <button type="button" class="num">2</a>
+                <button type="button" class="num">3</a>
+                <button type="button" class="op" id="subtract">-</a>
+                <button type="button" class="decimal">.</a>
+                <button type="button" class="num">0</a>
+                <button type="button" class="op" id="equal">=</a>
+                <button type="button" class="op" id="add">+</a>
             </ul>
         </div>
     </div>
