--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 <body>
     <div class="container">
         <div class="screen">
-            <h3 class="prev-equation"></h3>
-            <h1 class="curr-input"></h1>
+            <div><h3 class="prev-equation"></h3></div>
+            <div><h1 class="curr-input">0</h1></div>
         </div>
         <div class="util-btns">
             <button type="button" class="clear-btn">Clear</button>
             <button type="button" class="delete-btn">Delete</button>
         </div>
         <div class="numpad grid">
-                <button type="button" class="num btn">7</button>
-                <button type="button" class="num">8</a>
-                <button type="button" class="num">9</a>
-                <button type="button" class="op" id="divide">&#247;</a>
-                <button type="button" class="num">4</a>
-                <button type="button" class="num">5</a>
-                <button type="button" class="num">6</a>
-                <button type="button" class="op" id="multiply">x</a>
-                <button type="button" class="num">1</a>
-                <button type="button" class="num">2</a>
-                <button type="button" class="num">3</a>
-                <button type="button" class="op" id="subtract">-</a>
-                <button type="button" class="decimal">.</a>
-                <button type="button" class="num">0</a>
-                <button type="button" class="op" id="equal">=</a>
-                <button type="button" class="op" id="add">+</a>
+            <button type="button" class="num">7</button>
+            <button type="button" class="num">8</a>
+            <button type="button" class="num">9</a>
+            <button type="button" class="op" id="divide">&#247;</a>
+            <button type="button" class="num">4</a>
+            <button type="button" class="num">5</a>
+            <button type="button" class="num">6</a>
+            <button type="button" class="op" id="multiply">&#215;</a>
+            <button type="button" class="num">1</a>
+            <button type="button" class="num">2</a>
+            <button type="button" class="num">3</a>
+            <button type="button" class="op" id="subtract">-</a>
+            <button type="button" class="decimal">.</a>
+            <button type="button" class="num">0</a>
+            <button type="button" class="equal">=</a>
+            <button type="button" class="op" id="add">+</a>
             </ul>
         </div>
     </div>
