--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <button type="button" class="num">7</button>
             <button type="button" class="num">8</a>
             <button type="button" class="num">9</a>
-            <button type="button" class="op" id="divide">&#247;</a>
+            <button type="button" class="op" id="divide">÷</a>
             <button type="button" class="num">4</a>
             <button type="button" class="num">5</a>
             <button type="button" class="num">6</a>
-            <button type="button" class="op" id="multiply">&#215;</a>
+            <button type="button" class="op" id="multiply">×</a>
             <button type="button" class="num">1</a>
             <button type="button" class="num">2</a>
             <button type="button" class="num">3</a>
